# Proyecto-1_Programaci-n_III_UTEC

./: .gitignore  AutenticacionStrategy.cpp  AutenticacionStrategy.h  Benchmark.h  CClases.cpp  CClases.h  CMakeLists.txt  Climpieza.cpp  Climpieza.h  Command.cpp  Command.h  Funciones.cpp  Funciones.h  IUsuarios.cpp  IUsuarios.h  Interfaz.cpp  Interfaz.h  Iterator.cpp  Iterator.h  LPeliculas.cpp  LPeliculas.h  LecPelis.cpp  LecPelis.h  LimPelis.cpp  LimPelis.h  Memento.cpp  Memento.h  Observer.cpp  Observer.h  PLimpieza.cpp  PLimpieza.h  Pprocesamiento.cpp  Pprocesamiento.h  PreProcesador.cpp  PreProcesador.h  Procesador.cpp  Procesador.h  Proxy.cpp  Proxy.h  README.md  (+10 more)
